Prevent large spacing on list items

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -154,6 +154,13 @@ video {
   hr {
     width: 100%;
   }
+  li {
+    margin-bottom: .3em;
+    > p {
+      padding: 0;
+      margin: 0;
+    }
+  }
   pre {
     white-space: pre;
     overflow-x: scroll;
